/*
 *  Copyright 2017 Google Inc.
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

package ch.kentai.android.soundingsoil.viewmodels;

import android.util.Log;

import java.util.concurrent.atomic.AtomicBoolean;

import androidx.annotation.MainThread;
import androidx.annotation.NonNull;
import androidx.annotation.Nullable;
import androidx.lifecycle.LifecycleOwner;
import androidx.lifecycle.MutableLiveData;
import androidx.lifecycle.Observer;

/**
 * A lifecycle-aware observable that sends only new updates after subscription, used for events like
 * navigation and Snackbar messages.
 * <p>
 * This avoids a common problem with events: on configuration change (like rotation) an update
 * can be emitted if the observer is active. This LiveData only calls the observable if there's an
 * explicit call to setValue() or call().
 * <p>
 * Note that only one observer is going to be notified of changes.
 */
@SuppressWarnings("unused")
public class SingleLiveEvent<T> extends MutableLiveData<T> {

	private static final String TAG = "SingleLiveEvent";

	private final AtomicBoolean mPending = new AtomicBoolean(false);

	@MainThread
	@Override
	public void observe(@NonNull final LifecycleOwner owner, @NonNull final Observer<? super T> observer) {
		if (hasActiveObservers()) {
			Log.w(TAG, "Multiple observers registered but only one will be notified of changes.");
		}

		// Observe the internal MutableLiveData
		super.observe(owner, t -> {
			if (mPending.compareAndSet(true, false)) {
				observer.onChanged(t);
			}
		});
	}

	@MainThread
	@Override
	public void setValue(@Nullable final T t) {
		mPending.set(true);
		super.setValue(t);
	}

	/**
	 * Used for cases where T is Void, to make calls cleaner.
	 */
	@MainThread
	public void call() {
		setValue(null);
	}
}
